--- a/src/test/java/me/kktrkkt/java8to11/resources/application-test.properties
+++ b/src/test/java/me/kktrkkt/java8to11/resources/application-test.properties
@@ -1,5 +1,4 @@
-spring.datasource.url=jdbc:postgresql://localhost:15432/studytest
-spring.datasource.username=studytest
-spring.datasource.password=studytest
+spring.datasource.url=jdbc:tc:postgresql:///studytest
+spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
 
 spring.jpa.hibernate.ddl-auto=create-drop
