chaos-monkey 설정 추가

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
+server.port=9999
+
 spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/study
+spring.datasource.url=jdbc:postgresql://localhost:6432/study
 spring.datasource.username=study
 spring.datasource.password=study
+
+spring.profiles.active=chaos-monkey
+
+management.endpoint.chaos.monkey.enabled=true
+management.endpoints.web.exposure.include=health,info,chaosmonkey
+
+chaos.monkey.watcher.repository=true
